--- a/_posts/2019-02-14-BERT.md
+++ b/_posts/2019-02-14-BERT.md
@@ -4,7 +4,7 @@ date: 2019-02-14
 tags: [NLP, NLU, Transformer, embedding]
 header:
   image: "images/deepspeech/deepspeech.jpg"
-excerpt: "BERT, nlp"
+excerpt: "BERT, NLP, Sentence Embedding"
 ---
 
 # H1 Heading
