--- a/_posts/2019-02-14-BERT.md
+++ b/_posts/2019-02-14-BERT.md
@@ -7,10 +7,11 @@ header:
 excerpt: "BERT, NLP, Sentence Embedding"
 ---
 
-# H1 Heading
+# BERT
 
-## H2 Heading
+## Pre-Training
 
-### H3 Heading
+### Fine Tuning
 
-Here is my *italic* and **bold** text
+In progress *....* will be  **updated** very soon.
+
