--- a/_posts/2019-02-14-BERT.md
+++ b/_posts/2019-02-14-BERT.md
@@ -3,7 +3,7 @@ title: "Bidirectional Encoder Representation of Transformer (BERT)"
 date: 2019-02-14
 tags: [NLP, NLU, Transformer, embedding]
 header:
-  image: "images/deepspeech/about.jpg"
+  image: "/images/about.jpg"
 excerpt: "BERT, NLP, Sentence Embedding"
 ---
 
